src/objects/Target__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Target Customers</relationshipLabel>
        <relationshipName>Target_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Target_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>unique field to avoid duplicate users and customers</description>
        <label>unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>visit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Visit</label>
        <referenceTo>Visit__c</referenceTo>
        <relationshipLabel>Target Customers</relationshipLabel>
        <relationshipName>Target_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Target Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Representative__c</columns>
        <columns>unique__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>